welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: value downto is not a member of Int
		for (h<- l-1 downto 0) {
                             ^